Commit para entrega (SLIDES/ DOCUMENTAÇÃO/ FORMATAÇÃO DE LETRAS)

--- a/.env.dev
+++ b/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='projetoIndividual'
 DB_USER='root'
-DB_PASSWORD='Jklpuzzo@2004'
+DB_PASSWORD='INSIRA A SENHA FRIZZA'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
